--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "https://github.com/Dignifiedquire/clean",
   "author": "Friedel Ziegelmayer",
   "license": "MIT",
   "dependencies": {
-    "pull-glob": "~1.0.0",
     "pull-stream": "~2.19.0",
-    "pull-split": "~0.1.1",
     "esprima": "~1.0.3",
     "escodegen": "0.0.22",
     "glob": "~3.2.1"
